--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,22 @@ buildscript {
         classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
 
+        classpath 'com.google.gms:google-services:4.3.10'
+
+        // Add the Crashlytics Gradle plugin
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
+
+        classpath 'com.google.firebase:perf-plugin:1.4.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+//
+//allprojects {
+//    repositories {
+//        google()  // Google's Maven repository
+//    }
+//}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
